@@ -128,7 +128,7 @@ function read_file($file, $mode)
 {
     return (new \Zest\Files\FileHandling())->open($file, $mode)->read($file);
 }
-function pagination($total = 10, $perPage = 6, $current = 1, $urlAppend = '/')
+function pagination($total = 10, $perPage = 6, $current = 1, $urlAppend = '/' , $ulCLass = 'pagination', $liClass = 'page-item' , $aClass = 'page-link')
 {
-    return (new \Zest\Common\Pagination($total, $perPage, $current, $urlAppend))->pagination();
+    return (new \Zest\Common\Pagination($total, $perPage, $current, $urlAppend,$ulCLass,$liClass,$aClass))->pagination();
 }
